config/manager/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
  labels:
    control-plane: capz-controller-manager

spec:
  selector:
    matchLabels:
      control-plane: capz-controller-manager
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: capz-controller-manager
        azure.workload.identity/use: "true"
      annotations:
        kubectl.kubernetes.io/default-container: manager
    spec:
      containers:
        - args:
            - --leader-elect
            - "--diagnostics-address=${CAPZ_DIAGNOSTICS_ADDRESS:=:8443}"
            - "--insecure-diagnostics=${CAPZ_INSECURE_DIAGNOSTICS:=false}"
            - "--feature-gates=MachinePool=${EXP_MACHINE_POOL:=true},AKSResourceHealth=${EXP_AKS_RESOURCE_HEALTH:=false},EdgeZone=${EXP_EDGEZONE:=false},ASOAPI=${EXP_ASO_API:=true},APIServerILB=${EXP_APISERVER_ILB:=false},ARO=${EXP_ARO:=false}"
            - "--v=0"
          image: controller:latest
          imagePullPolicy: Always
          name: manager
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/run/secrets/azure/tokens
              name: azure-identity-token
              readOnly: true
          ports:
            - containerPort: 9440
              name: healthz
              protocol: TCP
            - containerPort: 8443
              name: metrics
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: healthz
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsGroup: 65532
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 10
      serviceAccountName: manager
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
      volumes:
      - name: tmp
        emptyDir: {}
      - name: azure-identity-token
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              audience: api://AzureADTokenExchange
              expirationSeconds: 3600
              path: azure-identity-token
